--- a/reportes.html
+++ b/reportes.html
@@ -33,10 +33,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="index.html"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Balance</a
               >
             </li>
@@ -51,19 +48,30 @@
       </div>
     </nav>
 
-    <!--REPORTES CARTA-->
+    <!--REPORTES CARTA y CONTENEDOR ALINEADOR-->
 
-    <main>
-      <div class="card">
-        <div class="card-body">
-          <h2 class="card-title">Reportes</h2>
-          <img src="https://frontend-proyecto-ahorradas.adaitw.org/imgs/chart.svg" alt="" class="imagen-reportes"/>
-          <h4>Operaciones insuficientes</h4>
-          <p class="card-text">Prueba agregando más operaciones</p>
+    <div class="container">
+      <div class="row">
+        <div class="col order-last"></div>
+        <div class="col">
+          <main>
+            <div class="card">
+              <div class="card-body">
+                <h2 class="card-title">Reportes</h2>
+                <img
+                  src="https://frontend-proyecto-ahorradas.adaitw.org/imgs/chart.svg"
+                  alt=""
+                  class="imagen-reportes"
+                />
+                <h4>Operaciones insuficientes</h4>
+                <p class="card-text">Prueba agregando más operaciones</p>
+              </div>
+            </div>
+          </main>
         </div>
+        <div class="col order-first"></div>
       </div>
-    </main>
-
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
