--- a/reportes.html
+++ b/reportes.html
@@ -55,7 +55,8 @@
         <div class="col order-last"></div>
         <div class="col">
           <main>
-            <div class="card">
+            <!---CARTA DE REPORTES INSUFICIENTES-->
+            <div class="card-insuficiente" style="display: none">
               <div class="card-body">
                 <h2 class="card-title">Reportes</h2>
                 <img
@@ -63,8 +64,92 @@
                   alt=""
                   class="imagen-reportes"
                 />
-                <h4>Operaciones insuficientes</h4>
+                <h4 class="operaciones-insuficientes">
+                  Operaciones insuficientes
+                </h4>
                 <p class="card-text">Prueba agregando más operaciones</p>
+              </div>
+            </div>
+
+            <!---CARTA DE REPORTES ENTEROS-->
+            <div class="card-reportes">
+              <div class="card-body">
+                <h2 class="card-title">Reportes</h2>
+                <div class="container">
+                  <h4 class="titulo-reportes-h4">Resumen</h4>
+                  <div class="row">
+                    <div class="col">
+                      <h3>Categoría con mayor ganancia</h3>
+                      <h3>Categoría con mayor gasto</h3>
+                      <h3>Categoría con mayor balance</h3>
+                      <h3>Mes con mayor ganancia</h3>
+                      <h3>Mes con mayor gasto</h3>
+                    </div>
+                    <div class="col"></div>
+                    <div class="col">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                    </div>
+                    <div class="col">
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                      <span></span>
+                    </div>
+                  </div>
+                </div>
+                <div class="container">
+                  <h4 class="titulo-reportes-h4">Totales por categorías</h4>
+                  <div class="row">
+                    <div class="col">
+                      <h3>Categoría</h3>
+                      <h3>PONER CATEGORIA</h3>
+                      <h3>PONER CATEGORIA</h3>
+                    </div>
+                    <div class="col">
+                      <h3>Ganancias</h3>
+                      <span></span>
+                      <span></span>
+                    </div>
+                    <div class="col">
+                      <h3>Gastos</h3>
+                      <span></span>
+                      <span></span>
+                    </div>
+                    <div class="col">
+                      <h3>Balance</h3>
+                      <span></span>
+                      <span></span>
+                    </div>
+                  </div>
+                </div>
+                <div class="container">
+                  <h4 class="titulo-reportes-h4">Totales por mes</h4>
+                  <div class="row">
+                    <div class="col">
+                      <h3>Mes</h3>
+                      <h3>PONER FECHA</h3>
+                    </div>
+                    <div class="col">
+                      <h3>Ganancias</h3>
+                      <span></span>
+                      <span></span>
+                    </div>
+                    <div class="col">
+                      <h3>Gastos</h3>
+                      <span></span>
+                      <span></span>
+                    </div>
+                    <div class="col">
+                      <h3>Balance</h3>
+                      <span></span>
+                      <span></span>
+                    </div>
+                </div>
               </div>
             </div>
           </main>
