--- a/categorias.html
+++ b/categorias.html
@@ -33,18 +33,15 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="index-principal y balance.html"
+              <a class="nav-link active" aria-current="page" href="index.html"
                 >Balance</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index-categorias.html">Categorías</a>
+              <a class="nav-link" href="categorias.html">Categorías</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index-reportes.html">Reportes</a>
+              <a class="nav-link" href="reportes.html">Reportes</a>
             </li>
           </ul>
         </div>
@@ -100,6 +97,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="javascript-categorias.js"></script>
+    <script src="categorias.js"></script>
   </body>
 </html>
