--- a/reportes.html
+++ b/reportes.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
+    <script src="https://kit.fontawesome.com/7dbcfcb415.js" crossorigin="anonymous"></script>
     <title>Reportes</title>
   </head>
   <body>
@@ -18,7 +19,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">AhorrADAs</a>
+        <a class="navbar-brand" href="#"><i class="fas fa-wallet"></i>AhorrADAs</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -34,14 +35,14 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
-                >Balance</a
+                ><i class="fas fa-chart-line"></i>Balance</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="categorias.html">Categorías</a>
+              <a class="nav-link" href="categorias.html"><i class="fas fa-tag"></i>Categorías</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="reportes.html">Reportes</a>
+              <a class="nav-link" href="reportes.html"><i class="fas fa-chart-pie"></i>Reportes</a>
             </li>
           </ul>
         </div>
@@ -56,7 +57,7 @@
         <div class="col">
           <main>
             <!---CARTA DE REPORTES INSUFICIENTES-->
-            <div class="card-insuficiente" style="display: none">
+            <div class="card-insuficiente">
               <div class="card-body">
                 <h2 class="card-title">Reportes</h2>
                 <img
@@ -72,7 +73,7 @@
             </div>
 
             <!---CARTA DE REPORTES ENTEROS-->
-            <div class="card-reportes">
+            <div class="card-reportes" style="display: none">
               <div class="card-body">
                 <h2 class="card-title">Reportes</h2>
                 <div class="container">
@@ -162,6 +163,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="javascript-reportes.js"></script>
+    <script src="reportes.js"></script>
   </body>
 </html>
