--- a/reportes.html
+++ b/reportes.html
@@ -164,5 +164,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="reportes.js"></script>
+    <script src="reportes.ts"></script>
   </body>
 </html>
