--- a/categorias.html
+++ b/categorias.html
@@ -97,6 +97,6 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="categorias.js"></script>
+    <script src="javascript-categorias.js"></script>
   </body>
 </html>
