--- a/index.html
+++ b/index.html
@@ -10,49 +10,53 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/7dbcfcb415.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles.css" />
     <title>Balance</title>
   </head>
   <body>
     <!--BARRA DE NAVEGACION-->
 
-    <div class="container-fluid">
-      <div class="row justify-content-between">
-        <div class="col-md-4">
-          <a class="navbar-brand" href="#">AhorrADAs</a>
-        </div>
-        <div class="col-md-3">
-          <nav class="navbar navbar-expand-lg">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="index.html"
-                    >Balance</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="categorias.html">Categorías</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="reportes.html">Reportes</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><i class="fas fa-wallet"></i>AhorrADAs</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                ><i class="fas fa-chart-line"></i>Balance</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="categorias.html"
+                ><i class="fas fa-tag"></i>Categorías</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="reportes.html"
+                ><i class="fas fa-chart-pie"></i>Reportes</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
+    </nav>
 
     <div class="container">
       <div class="row">
@@ -146,5 +150,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="balance.js"></script>
+    <script src="balance.ts"></script>
   </body>
 </html>
