--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
                 <label for="validationCustom04" class="form-label"
                   >Categoría</label
                 >
-                <select class="form-select" id="validationCustom04" required>
+                <select class="form-select" id="validationCustom05" required>
                   <option selected disabled value="">Todas</option>
-                  <option>Servicios</option>
+                  <!--  <option>Servicios</option>
                   <option>Salidas</option>
                   <option>Educación</option>
                   <option>Transporte</option>
-                  <option>Trabajo</option>
+                  <option>Trabajo</option>-->
                 </select>
 
                 <hr />
@@ -150,6 +150,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="balance.js"></script>
-    <script src="balance.ts"></script>
   </body>
 </html>
