--- a/categorias.html
+++ b/categorias.html
@@ -10,6 +10,10 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <script
+      src="https://kit.fontawesome.com/7dbcfcb415.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles.css" />
     <title>Categorías</title>
   </head>
@@ -18,7 +22,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">AhorrADAs</a>
+        <a class="navbar-brand" href="#"
+          ><i class="fas fa-wallet"></i>AhorrADAs</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -34,14 +40,18 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
-                >Balance</a
+                ><i class="fas fa-chart-line"></i>Balance</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="categorias.html">Categorías</a>
+              <a class="nav-link" href="categorias.html"
+                ><i class="fas fa-tag"></i>Categorías</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="reportes.html">Reportes</a>
+              <a class="nav-link" href="reportes.html"
+                ><i class="fas fa-chart-pie"></i>Reportes</a
+              >
             </li>
           </ul>
         </div>
