--- a/reportes.html
+++ b/reportes.html
@@ -88,18 +88,18 @@
                     </div>
                     <div class="col"></div>
                     <div class="col">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
+                      <span id="categoria"></span>
+                      <span id="categoria"></span>
+                      <span id="categoria"></span>
+                      <span id="categoria"></span>
+                      <span id="categoria"></span>
                     </div>
                     <div class="col">
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
-                      <span></span>
+                      <span id="montoPositivo"></span>
+                      <span id="montoNegativo"></span>
+                      <span id="montoTotal"></span>
+                      <span id="fechaActual"></span>
+                      <span id="fechaActual"></span>
                     </div>
                   </div>
                 </div>
