--- a/reportes.html
+++ b/reportes.html
@@ -11,7 +11,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://kit.fontawesome.com/7dbcfcb415.js" crossorigin="anonymous"></script>
     <title>Reportes</title>
   </head>
   <body>
@@ -19,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><i class="fas fa-wallet"></i>AhorrADAs</a>
+        <a class="navbar-brand" href="#">AhorrADAs</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -34,136 +33,42 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                ><i class="fas fa-chart-line"></i>Balance</a
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                >Balance</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="categorias.html"><i class="fas fa-tag"></i>Categorías</a>
+              <a class="nav-link" href="categorias.html">Categorías</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="reportes.html"><i class="fas fa-chart-pie"></i>Reportes</a>
+              <a class="nav-link" href="reportes.html">Reportes</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-    <!--REPORTES CARTA y CONTENEDOR ALINEADOR-->
+    <!--REPORTES CARTA-->
 
-    <div class="container">
-      <div class="row">
-        <div class="col order-last"></div>
-        <div class="col">
-          <main>
-            <!---CARTA DE REPORTES INSUFICIENTES-->
-            <div class="card-insuficiente">
-              <div class="card-body">
-                <h2 class="card-title">Reportes</h2>
-                <img
-                  src="https://frontend-proyecto-ahorradas.adaitw.org/imgs/chart.svg"
-                  alt=""
-                  class="imagen-reportes"
-                />
-                <h4 class="operaciones-insuficientes">
-                  Operaciones insuficientes
-                </h4>
-                <p class="card-text">Prueba agregando más operaciones</p>
-              </div>
-            </div>
-
-            <!---CARTA DE REPORTES ENTEROS-->
-            <div class="card-reportes" style="display: none">
-              <div class="card-body">
-                <h2 class="card-title">Reportes</h2>
-                <div class="container">
-                  <h4 class="titulo-reportes-h4">Resumen</h4>
-                  <div class="row">
-                    <div class="col">
-                      <h3>Categoría con mayor ganancia</h3>
-                      <h3>Categoría con mayor gasto</h3>
-                      <h3>Categoría con mayor balance</h3>
-                      <h3>Mes con mayor ganancia</h3>
-                      <h3>Mes con mayor gasto</h3>
-                    </div>
-                    <div class="col"></div>
-                    <div class="col">
-                      <span id="categoria"></span>
-                      <span id="categoria"></span>
-                      <span id="categoria"></span>
-                      <span id="categoria"></span>
-                      <span id="categoria"></span>
-                    </div>
-                    <div class="col">
-                      <span id="montoPositivo"></span>
-                      <span id="montoNegativo"></span>
-                      <span id="montoTotal"></span>
-                      <span id="fechaActual"></span>
-                      <span id="fechaActual"></span>
-                    </div>
-                  </div>
-                </div>
-                <div class="container">
-                  <h4 class="titulo-reportes-h4">Totales por categorías</h4>
-                  <div class="row">
-                    <div class="col">
-                      <h3>Categoría</h3>
-                      <h3>PONER CATEGORIA</h3>
-                      <h3>PONER CATEGORIA</h3>
-                    </div>
-                    <div class="col">
-                      <h3>Ganancias</h3>
-                      <span></span>
-                      <span></span>
-                    </div>
-                    <div class="col">
-                      <h3>Gastos</h3>
-                      <span></span>
-                      <span></span>
-                    </div>
-                    <div class="col">
-                      <h3>Balance</h3>
-                      <span></span>
-                      <span></span>
-                    </div>
-                  </div>
-                </div>
-                <div class="container">
-                  <h4 class="titulo-reportes-h4">Totales por mes</h4>
-                  <div class="row">
-                    <div class="col">
-                      <h3>Mes</h3>
-                      <h3>PONER FECHA</h3>
-                    </div>
-                    <div class="col">
-                      <h3>Ganancias</h3>
-                      <span></span>
-                      <span></span>
-                    </div>
-                    <div class="col">
-                      <h3>Gastos</h3>
-                      <span></span>
-                      <span></span>
-                    </div>
-                    <div class="col">
-                      <h3>Balance</h3>
-                      <span></span>
-                      <span></span>
-                    </div>
-                </div>
-              </div>
-            </div>
-          </main>
+    <main>
+      <div class="card">
+        <div class="card-body">
+          <h2 class="card-title">Reportes</h2>
+          <img src="https://frontend-proyecto-ahorradas.adaitw.org/imgs/chart.svg" alt="" class="imagen-reportes"/>
+          <h4>Operaciones insuficientes</h4>
+          <p class="card-text">Prueba agregando más operaciones</p>
         </div>
-        <div class="col order-first"></div>
       </div>
-    </div>
+    </main>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <script src="reportes.js"></script>
-    <script src="reportes.ts"></script>
+    <script src="javascript-reportes.js"></script>
   </body>
 </html>
