--- a/categorias.html
+++ b/categorias.html
@@ -53,47 +53,38 @@
 
     <!--CATEGORIAS CARTA-->
 
-    <main>
-      <h2>Categorías</h2>
-      <label for="name">Nombre</label>
-      <input type="text" name="" id="" />
-      <button>Agregar</button>
-      <div class="example-container">
-        <div class="example-row">
-          <div class="example-content-main">Servicios</div>
-          <div class="example-content-secondary"><button>Editar</button></div>
-          <div class="example-content-secondary"><button>Eliminar</button></div>
+        <!-- 
+      ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+                          Categoría
+      ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+     -->
+
+
+     <section id="categoriasSection">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div class="content-box">
+              <h3>Categorías</h3>
+              <form>
+                <div class="mb-3">
+                  <label for="exampleInputEmail1" class="form-label">Nombre</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+                <button type="submit" class="btn btn-primary">Agregar</button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-8">Servicios</div>
+          <div class="col-2"><button>Editar</button></div>
+          <div class="col-2"><button>Eliminar</button></div>
         </div>
       </div>
-      <div class="example-container">
-        <div class="example-row">
-          <div class="example-content-main">Salidas</div>
-          <div class="example-content-secondary"><button>Editar</button></div>
-          <div class="example-content-secondary"><button>Eliminar</button></div>
-        </div>
-      </div>
-      <div class="example-container">
-        <div class="example-row">
-          <div class="example-content-main">Educación</div>
-          <div class="example-content-secondary"><button>Editar</button></div>
-          <div class="example-content-secondary"><button>Eliminar</button></div>
-        </div>
-      </div>
-      <div class="example-container">
-        <div class="example-row">
-          <div class="example-content-main">Transporte</div>
-          <div class="example-content-secondary"><button>Editar</button></div>
-          <div class="example-content-secondary"><button>Eliminar</button></div>
-        </div>
-      </div>
-      <div class="example-container">
-        <div class="example-row">
-          <div class="example-content-main">Trabajo</div>
-          <div class="example-content-secondary"><button>Editar</button></div>
-          <div class="example-content-secondary"><button>Eliminar</button></div>
-        </div>
-      </div>
-    </main>
+    </section>
+
+    
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
