agrego estilos a la tabla operaciones

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
      -->
 
-     <section id="balaceSection">
+     <section id="balanceSection">
        <div class="container">
           <div class="row">
 
@@ -192,10 +192,10 @@
                         <h3>Operaciones</h3>
                     </div>
                     <div class="col">
-                        <button type="submit" class="btn btn-success" ><a href="/agregar-operacion.html">+ Nueva Operacion</a></button>
+                        <button type="submit" class="btn btn-primary btn-nueva-op" ><a href="/agregar-operacion.html">+ Nueva Operacion</a></button>
                     </div>
                     </div>
-                    <div class="row">
+                    <div class="row header-tabla-op">
                     <div class="col">Descripcion</div>
                     <div class="col">Categorias</div>
                     <div class="col">Fecha</div>
