--- a/reportes.html
+++ b/reportes.html
@@ -133,6 +133,7 @@
                   <div class="col">
                     <h3>Balance</h3>
                     <p id="montoTotal"></p>
+                    <p id="montoTotal"></p>
                   </div>
                 </div>
               </div>
