--- a/categorias.html
+++ b/categorias.html
@@ -14,93 +14,111 @@
       src="https://kit.fontawesome.com/7dbcfcb415.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="categorias.css" />
     <title>Categorías</title>
   </head>
   <body>
-    <!--BARRA DE NAVEGACION-->
+  <!--BARRA DE NAVEGACION-->
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"
-          ><i class="fas fa-wallet"></i>AhorrADAs</a
-        >
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                ><i class="fas fa-chart-line"></i>Balance</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="categorias.html"
-                ><i class="fas fa-tag"></i>Categorías</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="reportes.html"
-                ><i class="fas fa-chart-pie"></i>Reportes</a
-              >
-            </li>
-          </ul>
-        </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"
+        ><i class="fas fa-wallet"></i>AhorrADAs</a
+      >
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html"
+              ><i class="fas fa-chart-line"></i>Balance</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="categorias.html"
+              ><i class="fas fa-tag"></i>Categorías</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="reportes.html"
+              ><i class="fas fa-chart-pie"></i>Reportes</a
+            >
+          </li>
+        </ul>
       </div>
-    </nav>
+    </div>
+  </nav>
+
 
     <!--CATEGORIAS CARTA-->
 
-    <main>
-      <h2>Categorías</h2>
-      <label for="name">Nombre</label>
-      <input type="text" name="" id="" />
-      <button>Agregar</button>
+    <main class="main-categories">
+      <div class="container-main-categories">
+        <h2>Categorías</h2>
+        <div class="form-categories">
+        <form id="form-add-category" action="">  
+        <label for="name-categories">Nombre</label>
+        </div>
+        <div class="imput-button">
+          <input type="text" name="name" id="input-category" />
+          <button type="submit">Agregar</button>
+        </div>
+        </form>
+
       <div class="example-container">
         <div class="example-row">
           <div class="example-content-main">Servicios</div>
-          <div class="example-content-secondary"><button>Editar</button></div>
-          <div class="example-content-secondary"><button>Eliminar</button></div>
+          <div class="example-content-secondary">
+            <button>Editar</button>
+            <button>Eliminar</button></div>
         </div>
       </div>
       <div class="example-container">
         <div class="example-row">
           <div class="example-content-main">Salidas</div>
-          <div class="example-content-secondary"><button>Editar</button></div>
-          <div class="example-content-secondary"><button>Eliminar</button></div>
+          <div class="example-content-secondary">
+            <button>Editar</button>
+            <button>Eliminar</button>
+        </div>
         </div>
       </div>
       <div class="example-container">
         <div class="example-row">
           <div class="example-content-main">Educación</div>
-          <div class="example-content-secondary"><button>Editar</button></div>
-          <div class="example-content-secondary"><button>Eliminar</button></div>
+          <div class="example-content-secondary">
+            <button>Editar</button>
+            <button>Eliminar</button></div>
         </div>
       </div>
       <div class="example-container">
         <div class="example-row">
           <div class="example-content-main">Transporte</div>
-          <div class="example-content-secondary"><button>Editar</button></div>
-          <div class="example-content-secondary"><button>Eliminar</button></div>
+          <div class="example-content-secondary">
+            <button>Editar</button>
+            <button>Eliminar</button></div>
         </div>
       </div>
       <div class="example-container">
         <div class="example-row">
           <div class="example-content-main">Trabajo</div>
-          <div class="example-content-secondary"><button>Editar</button></div>
-          <div class="example-content-secondary"><button>Eliminar</button></div>
+          <div class="example-content-secondary">
+            <button>Editar</button>
+            <button>Eliminar</button></div>
         </div>
       </div>
+    </div>
+  </div>
     </main>
+
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
